<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".Donate">

    <TextView
        android:id="@+id/donateTitle"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="575dp"
        android:text="@string/donateTitle"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/donateSubtitle"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <TextView
        android:id="@+id/donateSubtitle"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/donateTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="137dp"
        android:text="@string/donateSubtitle"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="86dp"
        android:onClick="donateButtonPressed"
        android:text="@string/donateButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <RadioGroup
        android:id="@+id/paymentMethod"
        android:layout_width="140dp"
        android:layout_height="106dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="237dp"
        android:layout_marginBottom="382dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188">>

        <RadioButton
            android:id="@+id/PayPal"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="253dp"
            android:checked="false"
            android:text="@string/paypal"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/Direct"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:checked="false"
            android:text="@string/direct"
            android:textSize="18sp" />
    </RadioGroup>

    <NumberPicker
        android:id="@+id/amountPicker"
        android:layout_width="57dp"
        android:layout_height="210dp"
        android:layout_alignEnd="@+id/donateSubtitle"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-125dp"
        android:layout_marginBottom="233dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="397dp"
        android:layout_height="38dp"
        android:layout_above="@+id/donateButton"
        android:layout_alignEnd="@+id/donateSubtitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="-134dp"
        android:layout_marginBottom="56dp"
        android:indeterminate="false"
        app:layout_constraintBottom_toTopOf="@+id/donateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethod"
        app:layout_constraintVertical_bias="0.553" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/donateButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="25dp"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toTopOf="@+id/donateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.509" />

    <EditText
        android:id="@+id/paymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/amount"
        android:layout_alignEnd="@+id/progressBar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="-9dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="144dp"
        android:layout_toEndOf="@+id/amount"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/totalSoFar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_alignEnd="@+id/paymentMethod"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="-185dp"
        android:text="@string/totalSoFar"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="78dp"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/donateButton"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.562" />

</RelativeLayout>